Closed
Bug 202972
Opened 22 years ago
Closed 22 years ago
Null mDocument triggering crash [@ nsDocAccessible::FireDocLoadFinished]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
595 bytes,
patch
|
aaronlev
:
review+
bzbarsky
:
superreview+
asa
:
approval1.4b+
|
Details | Diff | Splinter Review |
nsDocAccessible::FireDocLoadFinished 18
BBID range: 19278230 - 19378882
Min/Max Seconds since last crash: 16 - 85011
Min/Max Runtime: 20 - 141963
Crash data range: 2003-04-18 to 2003-04-21
Build ID range: 2003041709 to 2003042105
Stack Trace:
nsDocAccessible::FireDocLoadFinished [c:/builds/seamonkey/mozilla/accessible/src/base/nsDocAccessible.cpp line 389]
nsTimerImpl::Fire [c:/builds/seamonkey/mozilla/xpcom/threads/nsTimerImpl.cpp line 383]
nsTimerManager::FireNextIdleTimer [c:/builds/seamonkey/mozilla/xpcom/threads/nsTimerImpl.cpp line 616]
nsAppShell::Run [c:/builds/seamonkey/mozilla/widget/src/windows/nsAppShell.cpp line 153]
nsAppShellService::Run [c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 479]
main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1287]
main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1653]
WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1675]
WinMainCRTStartup()
KERNEL32.dll + 0x2847c (0x77e7847c)
383 void nsDocAccessible::FireDocLoadFinished()
384 {
385 // Hook up our new accessible with our parent
386 if (!mParent) {
387 nsCOMPtr<nsIDocument> parentDoc;
388 mDocument->GetParentDocument(getter_AddRefs(parentDoc));
389 if (parentDoc) {
Attachment #121350 -
Flags: superreview?(bzbarsky)
Attachment #121350 -
Flags: review?(aaronl)
Comment 2•22 years ago
|
||
Comment on attachment 121350 [details] [diff] [review]
proposed wallpaper
sr=me, but are there legit reasons mDocument would be null? If so, please
remove the assert.
Attachment #121350 -
Flags: superreview?(bzbarsky) → superreview+
Comment 3•22 years ago
|
||
Comment on attachment 121350 [details] [diff] [review]
proposed wallpaper
r=aaronl
Attachment #121350 -
Flags: review?(aaronl) → review+
Comment 4•22 years ago
|
||
You might want to check out bug 166504 timeless and see if you still this
problem. I'm wondering if it may be the source of this problem as well. Actually
I wonder if it is just a symptom of another problem, that is causing the QI to
fail in nsXULButtonAccessible::GetAccState
Updated•22 years ago
|
Attachment #121350 -
Flags: approval1.4b?
Comment 5•22 years ago
|
||
Comment on attachment 121350 [details] [diff] [review]
proposed wallpaper
a=asa (on behalf of drivers) for checkin to 1.4b.
Attachment #121350 -
Flags: approval1.4b? → approval1.4b+
Comment 6•22 years ago
|
||
I just checked this in at timeless' request.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsDocAccessible::FireDocLoadFinished]
You need to log in
before you can comment on or make changes to this bug.
Description
•