Bug 202972 - Null mDocument triggering crash [@ nsDocAccessible::FireDocLoadFinished] Patch by timeless, r=aaronl, sr=bzbarsky, a=asa